Added a change to make sure users can't close the program until the final screen Removed the machine specific settings file for Qt Generalised the ignore to miss the machine specific stuff, along with the build directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 ###################################
 ## Market Simulation
 ###################################
-MarketSimulation-build-desktop-Qt_4_8_1_for_Desktop_-_MinGW__Qt_SDK__Debug
+MarketSimulation-build-desktop-*
+# Qt system specific project files
+*.pro.user
 
 #################
 ## Eclipse
